[package]
name = "axum-tungstenite"
version = "0.1.0"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "WebSocket connections for axum directly using tungstenite"
edition = "2021"
homepage = "https://github.com/davidpdrsn/axum-tungstenite"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-tungstenite"

[dependencies]
async-trait = "0.1.53"
axum-core = "0.2.4"
base64 = "0.13.0"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2.7"
http-body = "0.4.4"
hyper = "0.14"
sha-1 = "0.10.0"
tokio = { version = "1.0", features = ["rt"] }
tokio-tungstenite = "0.17.1"

[dev-dependencies]
axum = "0.5"
