[package]
name = "axum-tungstenite"
version = "0.3.0"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "WebSocket connections for axum directly using tungstenite"
edition = "2021"
homepage = "https://github.com/davidpdrsn/axum-tungstenite"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-tungstenite"

[dependencies]
async-trait = "0.1.59"
axum-core = "0.3.0"
base64 = "0.21.0"
bytes = "1.3.0"
futures-util = { version = "0.3.25", default-features = false, features = ["alloc"] }
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.23"
sha-1 = "0.10.1"
tokio = { version = "1.23.0", features = ["rt"] }
tokio-tungstenite = "0.20.0"

[dev-dependencies]
axum = "0.6.1"
